typesafe-builders/tests/ui/reject/field_attr/decay/multiple_generics.rs
mod other {
	use typesafe_builders::prelude::*;

	#[derive(Builder)]
	pub struct Struct {
		#[builder(decay)]
		x: Result<(), ()>,
	}
}

fn main() {
}
